--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 wheel
-pillow==9.5.0
-streamlit==1.25.0
-python-dotenv==1.0.0
-PyPDF2==3.0.1
-langchain==0.0.299
-openai==0.27.10
-faiss-cpu==1.7.4
-tiktoken==0.4.0
+pillow
+streamlit
+python-dotenv
+PyPDF2
+langchain
+openai
+faiss-cpu
+tiktoken
+langchain-community
+langchain-openai
